--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       header p { padding-left: 4.5em;}
     }
     </style>
-    <link href="css/print.css" rel="stylesheet">
+    <link href="css/print.css" rel="stylesheet" media="print">
 
     <script async>
       (function(w,g){w['GoogleAnalyticsObject']=g;
