--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
 
-    <style>
-    @import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
+    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
+    <link rel="preload" href="//fonts.googleapis.com/css?family=Open+Sans:400" as="style">
 
+    <style>
+
+    <style>
     html {
       font-size: 100%;
       overflow-y: scroll;
